# picoOS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  deps.sh  doall.sh  env.sh  graph.py  load.sh  main.c  prebuild.py
cfg/: README.md  core.h  env.h
core/: .gitignore
core/drivers/: ds18b20.c  ds18b20.h
core/drv/: cmd.c  cmd.h  led.c  led.h
core/hal/: hal_timer.h  hal_uart.c  hal_uart.h
core/include/: nkernel.c  nkernel.h
core/kernel/: kernel.c  kernel.h  scheduler.c  scheduler.h
drivers/: led.c  led.h
ext/drv/: README.md
ext/files/: README.md
hal/: hal.c  hal_gpio.c  hal_gpio.h  hal_timer.c  hal_uart.h
kernel/: kernel.c  scheduler.c
picoOS/: CMakeLists.txt
picoOS/cfg/: core.h  env.h
picoOS/src/: main.c
